updates urls for SW and holiday slots archives 5-22-2017 build from old scaffold

--- a/app/elements/portfolio-page-home.html
+++ b/app/elements/portfolio-page-home.html
@@ -82,9 +82,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       @media screen and (max-width: 767px) {
         .l-project-grid portfolio-project {
-          -webkit-flex: 0 0 97%;
-              -ms-flex: 0 0 97%;
-                  flex: 0 0 97%;
+          -webkit-flex: 0 0 47%;
+              -ms-flex: 0 0 47%;
+                  flex: 0 0 47%;
         }
       }
 
@@ -94,13 +94,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
 
-      /*@media screen and (max-width: 480px) {
+      @media screen and (max-width: 480px) {
         .l-project-grid portfolio-project {
           -webkit-flex: 0 0 97%;
               -ms-flex: 0 0 97%;
                   flex: 0 0 97%;
         }
-      }*/
+      }
 
       #loader {
         position: absolute;
