--- a/app/elements/projects/portfolio-page-project-kraft.html
+++ b/app/elements/projects/portfolio-page-project-kraft.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     </style>
 
-    <portfolio-page-project title="Kraft Mac N' Cheese" link="http://www.kraftstarwarsroom.com/">
+    <portfolio-page-project title="Kraft Mac N' Cheese" link="http://dev.herbtorres.com/kraft-star-wars/">
 
       <aside sidebar>
 
@@ -30,7 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <section content>
 
-        <iron-image preload fade src="../../images/preview/preview-sw.jpg"></iron-image>       
+        <iron-image preload fade src="../../images/preview/preview-sw.jpg"></iron-image>
       </section>
 
     </portfolio-page-project>
