--- a/app/elements/projects/portfolio-page-project-slots.html
+++ b/app/elements/projects/portfolio-page-project-slots.html
@@ -21,7 +21,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     </style>
 
-    <portfolio-page-project title="Holiday Slots 2015" link="http://herbtorres.com/happy-holidays/">
+    <portfolio-page-project title="Holiday Slots 2015" link="http://holidays.herbtorres.com/holiday-slots/">
 
       <aside sidebar>
 
@@ -30,7 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       <section content>
 
-        <iron-image preload fade src="../../images/preview/preview-slots.jpg"></iron-image>       
+        <iron-image preload fade src="../../images/preview/preview-slots.jpg"></iron-image>
       </section>
 
     </portfolio-page-project>
