--- a/app/elements/shared-styles.html
+++ b/app/elements/shared-styles.html
@@ -7,9 +7,9 @@
 				--white: #FFFFFF;
 				--black: #000;
 				--logo-red: #cf482a;
-				--logo-black: #393b39; 
+				--logo-black: #393b39;
 				--site-max-width: 1120px;
-		  
+
 			  	--layout-flex: {
 			  		display: -webkit-flex;
 			  		display: -moz-flex;
@@ -42,6 +42,7 @@
 			}
 
 			iron-image {
+			  --iron-image-width: 100%;
 				--iron-image-placeholder: {
 				  background-repeat: no-repeat;
 				  background-position: center center;
@@ -50,7 +51,7 @@
 				          background-size: cover;
 				}
 			}
- 
+
     </style>
   </template>
 </dom-module>
