--- a/psk-www/src/elements.html
+++ b/psk-www/src/elements.html
@@ -10,6 +10,7 @@
 <link rel="import" href="portfolio-footer.html">
 <link rel="import" href="portfolio-page-project.html">
 <link rel="import" href="portfolio-project.html">
+<link rel="import" href="portfolio-icon.html">
 <link rel="import" href="portfolio-icons.html">
 <link rel="import" href="youtube-player.html">
 
@@ -21,10 +22,10 @@
 <!-- project pages -->
 <link rel="import" href="projects/portfolio-page-project-rewind.html">
 <link rel="import" href="projects/portfolio-page-project-rewind-16.html">
-<link rel="import" href="projects/portfolio-page-project-nextup.html">
+<!-- <link rel="import" href="projects/portfolio-page-project-nextup.html"> -->
 <link rel="import" href="projects/portfolio-page-project-artifact.html">
 <link rel="import" href="projects/portfolio-page-project-creator.html">
-<link rel="import" href="projects/portfolio-page-project-descent.html">
+<!-- <link rel="import" href="projects/portfolio-page-project-descent.html"> -->
 <link rel="import" href="projects/portfolio-page-project-terra.html">
 <link rel="import" href="projects/portfolio-page-project-kraft.html">
 <link rel="import" href="projects/portfolio-page-project-stitches.html">
