--- a/psk-www/src/portfolio-main.html
+++ b/psk-www/src/portfolio-main.html
@@ -40,6 +40,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="shared-styles.html">
 <link rel="import" href="portfolio-icon.html">
 <link rel="import" href="portfolio-icons.html">
+<link rel="import" href="youtube-player.html">
 
 <link rel="import" href="projects/portfolio-page-project-artifact.html">
 <link rel="import" href="projects/portfolio-page-project-ats.html">
@@ -80,6 +81,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       neon-animatable {
         height: 100%
       }
+
+      /*paper-drawer-panel {
+        --paper-drawer-panel-scrim: {
+          background: rgba(255, 255, 255, 0);
+        }
+      }*/
 
       #main-nav .title {
         @apply(--layout-horizontal);
